Several changes based on TODO file
