# docs/swagger.json
@@ -7,7 +7,86 @@
         "version": "0.0.1"
     },
     "paths": {
+        "/execlogs": {
+            "get": {
+                "description": "This endpoint tries to get the logs of an executable that is set in the orchestrator.",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "orchestrator"
+                ],
+                "summary": "Get the logs of an executable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "UUID of the executable to get logs",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Type of logs to get",
+                        "name": "type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ExecLogsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/run": {
+            "get": {
+                "description": "This endpoint tries to run an executable that is set in the orchestrator.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orchestrator"
+                ],
+                "summary": "Run an executable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "UUID of the executable to run",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.RunResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.RunResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/runall": {
             "get": {
                 "description": "This endpoint tries to run all the executables that are set in the orchestrator.",
                 "produces": [
@@ -21,13 +100,48 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.RunResponse"
+                            "$ref": "#/definitions/dtos.RunAllResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dtos.RunResponse"
+                            "$ref": "#/definitions/dtos.RunAllResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/rungroup": {
+            "get": {
+                "description": "This endpoint tries to run a group of executables that are set in the orchestrator.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orchestrator"
+                ],
+                "summary": "Run a group of executables",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID to run",
+                        "name": "group",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.RunGroupResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.RunGroupResponse"
                         }
                     }
                 }
@@ -88,6 +202,42 @@
                 }
             }
         },
+        "/stop": {
+            "get": {
+                "description": "This endpoint tries to stop an executable that is set in the orchestrator.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orchestrator"
+                ],
+                "summary": "Stops an executable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "UUID of the group to stop",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StopResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StopResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/stopall": {
             "get": {
                 "description": "This endpoint tries to stop all the executables that are set in the orchestrator.",
@@ -109,6 +259,41 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/dtos.StopAllResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/stopgroup": {
+            "get": {
+                "description": "This endpoint tries to stop a group of executables that are set in the orchestrator.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orchestrator"
+                ],
+                "summary": "Stops a group of executables",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID to stop",
+                        "name": "group",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StopGroupResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StopGroupResponse"
                         }
                     }
                 }
@@ -142,6 +327,30 @@
         }
     },
     "definitions": {
+        "dtos.ExecLogsResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.RunAllResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.RunGroupResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.RunResponse": {
             "type": "object",
             "properties": {
@@ -174,6 +383,22 @@
                 }
             }
         },
+        "dtos.StopGroupResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.StopResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.UnsetResponse": {
             "type": "object",
             "properties": {
@@ -187,6 +412,9 @@
             "properties": {
                 "auto_restart": {
                     "type": "boolean"
+                },
+                "group": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "string"
