# internal/apihttp/dtos/responses.go
@@ -1,21 +1,5 @@
 package dtos
 
-type SetResponse struct {
-	Message string `json:"message"`
-}
-
-type UnsetResponse struct {
-	Message string `json:"message"`
-}
-
-type RunResponse struct {
-	Message string `json:"message"`
-}
-
-type StopAllResponse struct {
-	Message string `json:"message"`
-}
-
-type StatusResponse struct {
+type GenericResponse struct {
 	Message string `json:"message"`
 }
